Mon,  4 Dec 2006 14:04:04 +0100 <thp@perli.net>
        * setup.py: Copy gPodder icon(s) to share/pixmaps now, and 
          only the artwork files to share/gpodder/images
        * Makefile: Generate 22x22 and 48x48 icons from gpodder.png
        * README: Note "imagemagick" as new developer dependency - 
          this is needed for the new image conversion in Makefile
        * data/gpodder.glade: Added three new links to help menu
        * src/gpodder/gpodder.py: Added three new link handlers for 
          help menu to link to website, wishlist and mailing list

Sun,  3 Dec 2006 19:07:27 +0100 <thp@perli.net>
        * src/gpodder/libwget.py: Remove partially downloaded files 
	  after download is cancelled or an error occured
        * src/gpodder/libgpodder.py: Added clean_up_downloads() function 
	  to gPodderLibClass to do some housekeeping in the download 
	  directory (remove temporary files from old sessions and remove 
	  empty download directories)
        * src/gpodder/gpodder.py: Call clean_up_downloads() when 
	  gPodder starts
        * bin/gpodder: Minor code cleanup, bumped version + release date

Fri,  1 Dec 2006 15:42:07 +0100 <thp@perli.net>
        * src/gpodder/libipodsync.py: Applied patch from Seth Remington
          to fix a synchronization error with newer libgpod versions
        * bin/gpodder: bumped version and release date

Thu, 30 Nov 2006 23:07:22 +0100 <thp@perli.net>
        * src/gpodder/libgpodder.py: Remove '.cover.jpg' file for 
	  episode if left on disk by libipodsync.py (see below)
        * src/gpodder/libipodsync.py: Applied iPodSync patch from 
	  Nick <nikosapi gmail com> to add support for ID3v2 
	  embedded cover art (please test this if you can)
	* README: Note optional pyid3 dependency

Tue, 28 Nov 2006 21:04:45 +0100 <thp@perli.net>
        * src/gpodder/gpodder.py: Added patch from Seth Remington (sremington 
          at saberlogic dot com) to fix about dialog close button
