@@ -5,9 +5,7 @@
    -> a-strange-title-fo.ad4ca80f3a003a299fbd3f98b5b9952c.mp3
    -> Same for podcast channels
 
- * gPodder should rewrite feed://-URLs to http:// ones. As many 
-   podcasts link to the feed with a feed://-URL which just is 
-   the same as http. (suggested by Timm Preetz <timm -- preetz us>)
+   me as http. (suggested by Timm Preetz <timm -- preetz us>)
  
  * My favourite Videocast offers 3gp-Files (for mobiles) and m4v-Files 
    (for iPods) in his feed.gPodder loads the low quality m4v-File, which 
