@@ -1,3 +1,9 @@
+Tue,  5 Dec 2006 01:37:23 +0100 <thp@perli.net>
+        * src/gpodder/gpodder.py: Added support for "feed://" URLs 
+          which are the same as "http://" URLs. Thanks to Timm 
+	  Preetz (timm at preetz us) for suggesting this addition.
+        * TODO: Updated TODO list (above item marked as done)
+
 Mon,  4 Dec 2006 14:04:04 +0100 <thp@perli.net>
         * setup.py: Copy gPodder icon(s) to share/pixmaps now, and 
           only the artwork files to share/gpodder/images
